--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,7 +160,7 @@ img.header__logo {
 }
 
 .donar__btn{
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: bold;
     padding: 0.2rem 0.2rem;
     border-radius: 1rem;
@@ -260,6 +260,9 @@ img.header__logo {
 
 /* ******* fin index ***** */
 
+
+/******** proyecto *******/
+
 .mascotasinf__h1{
     font-size: 3rem;
     text-align: center;
@@ -269,37 +272,19 @@ img.header__logo {
     margin-bottom: 2.3rem;
 }
 
-.slider{
-    margin-left: 5%;
-    width: 90vw;
-    overflow-x: scroll;
+.carousel{
+    padding: 0;
 }
 
-.slider__ul{
-    display: flex;
-    
-}
-
-.slider__li{
-    list-style-type: none;
-    border: #00a6c0 solid 0.5rem;
-}
-
-.slider__img{
-    width: 20rem;
-    height: 20rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+.w-100{
+    height: 600px;
 }
 
 .mascotasinf__div{
-    width: 40rem;
-    height: 5rem;
     display: flex;
     margin: 1rem;
     padding: 1rem;
     align-items: center;    
-
 }
 
 .mascotainf__img{
@@ -434,23 +419,61 @@ img.header__logo {
 
 /********** tienda ************/
 
-.catalogo__h1{
-    display: block;
-    font-size: 3rem;
-    text-align: center;
-    color: #05c9e7;
-    top: 1rem;
-    margin-top: 2.3rem;
-    margin-bottom: 2.3rem;
+.cartas__tienda{
+    padding: 2rem;
+    box-sizing: content-box;
+    width: 10rem;
+    background-repeat: no-repeat;
+    background-position: top;
+    border: #5f7174 solid 0.5rem;
+    margin: 1rem;
+    background-size: contain;
 }
 
-.div__tabla{
-    text-align: center;
+.erizo{
+    background-image: url("../img/erizox.jpg");
+}
+.cartas__mascotas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.catalogo__tabla{
-    margin: 10%;
-    margin-top: 2rem;
+.cartas__item{
+    color: #00a6c0;
+    font-weight: bolder;
+    font-size: 2rem;
+    padding-top: 12rem;
+}
+
+.cartas__parrafo{
+    color: rgb(0, 0, 0);
+    height: 8rem;
+    overflow: scroll;
+}
+
+.huron{
+    background-image: url("../img/huron.jpg");
+    background-size: 338px;
+}
+
+.conejo{
+    background-image: url("../img/conejox.jpg");
+    background-size: 400px;
+}
+
+.chinchilla{
+    background-image: url("../img/Chinchillax.jpg");
+    background-size: 300px;
+}
+.hamster{
+    background-image: url("../img/hamster.jpg");
+    background-size: 400px;
+}
+
+.cobayo{
+    background-image: url("../img/cobayox.jpg");
+    background-size: 400px;
 }
 
 .contact__tienda{
@@ -463,6 +486,36 @@ img.header__logo {
     margin-top: 3rem;
     color: #05c9e7;
     font-size: 2rem;
+}
+
+.rueda{
+    background-image: url("../img/rueda.jpg");
+    background-size: 200px;
+}
+.gorro{
+    background-image: url("../img/gorro.jpg");
+}
+.jaula1{
+    background-image: url("../img/jaula1.jpg");
+}
+.jaula2{
+    background-image: url("../img/jaula2.jpg");
+    background-size: 190px;
+}
+.kit_viaje{
+    background-image: url("../img/kit_viaje.jpg");
+}
+.dispensador{
+    background-image: url("../img/dispensador.jpg");
+}
+.comedero{
+    background-image: url("../img/comedero.jpg");
+}
+.jardin{
+    background-image: url("../img/jardin.jpg");
+}
+.conejera{
+    background-image: url("../img/conejera.jpg");
 }
 
 /************ contacto **********/
@@ -531,10 +584,12 @@ img.header__logo {
     .negocio__div{
         flex-direction: column;
     }
+
     .footer {
         flex-direction: column;
         line-height: 2.5rem;
     }
+
     .hero{
         height: 82vh;
         }
@@ -551,11 +606,17 @@ img.header__logo {
             width: 50px;
             height: 50px;
     }
+
     .cartas__div{
         flex-direction: column;
     }
+
     .team__video{
         width: 100vw;
+    }
+
+    .w-100{
+        height: 500px;
     }
 }
 
@@ -584,7 +645,15 @@ img.header__logo {
             width: 50px;
             height: 50px;
     }
+
     .team__video{
         width: 100vw;
+    }
+    
+    .mascotasinf__div{
+        flex-direction: column;
+    }
+    .w-100{
+        height: 300px;
     }
 }
