anidaciones y arreglos de links

--- a/css/compilado.css
+++ b/css/compilado.css
@@ -12,6 +12,9 @@ h1 {
   text-shadow: 0rem 0.2rem 0.3rem #000000;
   font-weight: bolder; }
 
+.navbar-toggler {
+  background-color: white; }
+
 /* ****HEADER**** */
 .header {
   display: grid;
@@ -50,51 +53,43 @@ img.header__logo {
   align-items: center;
   justify-content: space-between;
   flex-direction: column; }
-
-.hero__h1 {
-  font-size: 3rem;
-  text-align: center;
-  color: #05c9e7;
-  margin-top: 1.5rem; }
-
-.hero__button {
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 0.2rem 0.2rem;
-  border-radius: 1rem;
-  border: solid 0.3rem #05c9e7;
-  background-color: #5f7174;
-  margin-bottom: 1rem; }
-
-.hero__button a {
-  color: white;
-  text-decoration: none; }
-
-.hero__button a:hover {
-  color: #05c9e7;
-  text-shadow: 0rem 0.2rem 0.3rem #000000;
-  font-size: 1.5rem; }
+  .hero__h1 {
+    font-size: 3rem;
+    text-align: center;
+    color: #05c9e7;
+    margin-top: 1.5rem; }
+  .hero__button {
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.2rem 0.2rem;
+    border-radius: 1rem;
+    border: solid 0.3rem #05c9e7;
+    background-color: #5f7174;
+    margin-bottom: 1rem; }
+    .hero__button a {
+      color: white;
+      text-decoration: none; }
+    .hero__button a:hover {
+      color: #05c9e7;
+      text-shadow: 0rem 0.2rem 0.3rem #000000;
+      font-size: 1.5rem; }
 
 .negocio {
   background-color: #6a888c; }
-
-.negocio__div {
-  display: flex;
-  padding: 1rem;
-  align-items: center; }
-
-.negocio__img {
-  width: 20rem; }
-
-.negocio__h2 {
-  font-size: 2rem;
-  padding: 1rem;
-  text-align: center;
-  color: #00a6c0; }
-
-.negocio__p {
-  text-align: center;
-  color: white; }
+  .negocio__div {
+    display: flex;
+    padding: 1rem;
+    align-items: center; }
+  .negocio__img {
+    width: 20rem; }
+  .negocio__h2 {
+    font-size: 2rem;
+    padding: 1rem;
+    text-align: center;
+    color: #00a6c0; }
+  .negocio__p {
+    text-align: center;
+    color: white; }
 
 .caract__lista {
   text-align: center;
@@ -107,48 +102,41 @@ img.header__logo {
   align-items: center;
   justify-content: end;
   flex-direction: column; }
-
-.donar__img {
-  padding: 1rem;
-  width: 10rem;
-  height: 12rem;
-  position: relative;
-  text-align: center; }
-
-.donar__img__div {
-  text-align: center;
-  margin: 1rem; }
-
-.donar__p {
-  font-size: 1.5rem;
-  display: inline-block;
-  width: 20rem;
-  text-align: center;
-  padding: 2rem;
-  color: white;
-  justify-content: center; }
-
-.donar_div {
-  text-align: center;
-  margin: 1rem; }
-
-.donar__btn {
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: 0.2rem 0.2rem;
-  border-radius: 1rem;
-  border: solid 0.3rem #05c9e7;
-  background-color: #5f7174;
-  margin-bottom: 1rem; }
-
-.donar__btn a {
-  color: white;
-  text-decoration: none; }
-
-.donar__btn a:hover {
-  color: #05c9e7;
-  text-shadow: 0rem 0.2rem 0.3rem #000000;
-  font-size: 1.5rem; }
+  .donar__img {
+    padding: 1rem;
+    width: 10rem;
+    height: 12rem;
+    position: relative;
+    text-align: center; }
+    .donar__img__div {
+      text-align: center;
+      margin: 1rem; }
+  .donar__p {
+    font-size: 1.5rem;
+    display: inline-block;
+    width: 20rem;
+    text-align: center;
+    padding: 2rem;
+    color: white;
+    justify-content: center; }
+  .donar_div {
+    text-align: center;
+    margin: 1rem; }
+  .donar__btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 0.2rem 0.2rem;
+    border-radius: 1rem;
+    border: solid 0.3rem #05c9e7;
+    background-color: #5f7174;
+    margin-bottom: 1rem; }
+    .donar__btn a {
+      color: white;
+      text-decoration: none; }
+    .donar__btn a:hover {
+      color: #05c9e7;
+      text-shadow: 0rem 0.2rem 0.3rem #000000;
+      font-size: 1.5rem; }
 
 .contact {
   margin-top: 3rem;
@@ -156,30 +144,26 @@ img.header__logo {
   align-items: center;
   justify-content: end;
   flex-direction: column; }
-
-.contact__h2 {
-  font-size: 3rem;
-  text-align: center;
-  color: #05c9e7;
-  top: 1rem; }
-
-.contact__btn {
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 0.2rem 0.2rem;
-  border-radius: 1rem;
-  border: solid 0.3rem #05c9e7;
-  background-color: #5f7174;
-  margin-bottom: 1rem; }
-
-.contact__btn a {
-  color: white;
-  text-decoration: none; }
-
-.contact__btn a:hover {
-  color: #05c9e7;
-  text-shadow: 0rem 0.2rem 0.3rem #000000;
-  font-size: 1.5rem; }
+  .contact__h2 {
+    font-size: 3rem;
+    text-align: center;
+    color: #05c9e7;
+    top: 1rem; }
+  .contact__btn {
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.2rem 0.2rem;
+    border-radius: 1rem;
+    border: solid 0.3rem #05c9e7;
+    background-color: #5f7174;
+    margin-bottom: 1rem; }
+    .contact__btn a {
+      color: white;
+      text-decoration: none; }
+    .contact__btn a:hover {
+      color: #05c9e7;
+      text-shadow: 0rem 0.2rem 0.3rem #000000;
+      font-size: 1.5rem; }
 
 /* ******* fin index ***** */
 /* ***** footer ****** */
@@ -223,17 +207,14 @@ img.header__logo {
   margin-top: 2.3rem;
   margin-bottom: 2.3rem; }
 
-.carousel {
-  padding: 0; }
-
-.w-100 {
-  height: 600px; }
-
 .mascotasinf__div {
   display: flex;
   margin: 1rem;
   padding: 1rem;
   align-items: center; }
+
+.mascotainf__p {
+  text-align: center; }
 
 .mascotainf__img {
   width: 5rem;
@@ -242,6 +223,12 @@ img.header__logo {
 .mascotainf__h2 {
   margin: 1rem;
   color: #00a6c0; }
+
+.carousel {
+  padding: 0; }
+
+.w-100 {
+  height: 600px; }
 
 /* ****** Equipo ****** */
 .team {
@@ -356,9 +343,6 @@ img.header__logo {
   margin: 1rem;
   background-size: contain; }
 
-.erizo {
-  background-image: url("../img/erizox.jpg"); }
-
 .cartas__mascotas {
   display: flex;
   flex-wrap: wrap;
@@ -374,6 +358,9 @@ img.header__logo {
   color: black;
   height: 8rem;
   overflow: scroll; }
+
+.erizo {
+  background-image: url("../img/erizox.jpg"); }
 
 .huron {
   background-image: url("../img/huron.jpg");
@@ -435,7 +422,11 @@ img.header__logo {
   background-image: url("../img/conejera.jpg"); }
 
 /************ contacto **********/
-.main__contacto
+.contenedor__form {
+  text-align: end;
+  display: flex;
+  justify-content: center; }
+
 .contact__mapa {
   grid-area: mapa;
   text-align: center;
