--- a/sass/parciales/_reset.scss
+++ b/sass/parciales/_reset.scss
@@ -4,3 +4,15 @@
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.contenedor{
+    max-width: 1400px;
+    margin: auto;
+}
+
+h1{
+    text-shadow: 0rem 0.2rem 0.3rem #000000;
+    font-weight: bolder;
+}
+.navbar-toggler {
+    background-color: rgb(255, 255, 255);
+}
