--- a/sass/parciales/_vars.scss
+++ b/sass/parciales/_vars.scss
@@ -1,9 +1,4 @@
-.contenedor{
-    max-width: 1400px;
-    margin: auto;
-}
-
-h1{
-    text-shadow: 0rem 0.2rem 0.3rem #000000;
-    font-weight: bolder;
-}
+$font: Verdana, Geneva, Tahoma, sans-serif;
+$content: 100vw, 2rem;
+$paleta: #00a6c0, #6a888c, #05c9e7, #5f7174;
+    
