--- a/sass/parciales/_proyecto.scss
+++ b/sass/parciales/_proyecto.scss
@@ -1,29 +1,24 @@
 /******** proyecto *******/
+.mascotasinf{
+    &__h1{
+        font-size: 3rem;
+        text-align: center;
+        color: #05c9e7;
+        top: 1rem;
+        margin-top: 2.3rem;
+        margin-bottom: 2.3rem;
+    }
+    &__div{
+        display: flex;
+        margin: 1rem;
+        padding: 1rem;
+        align-items: center;    
+    }
 
-.mascotasinf__h1{
-    font-size: 3rem;
+}
+.mascotainf__p{
     text-align: center;
-    color: #05c9e7;
-    top: 1rem;
-    margin-top: 2.3rem;
-    margin-bottom: 2.3rem;
 }
-
-.carousel{
-    padding: 0;
-}
-
-.w-100{
-    height: 600px;
-}
-
-.mascotasinf__div{
-    display: flex;
-    margin: 1rem;
-    padding: 1rem;
-    align-items: center;    
-}
-
 .mascotainf__img{
     width: 5rem;
     height: 5rem;
@@ -32,4 +27,12 @@
 .mascotainf__h2{
     margin: 1rem;
     color: #00a6c0;  
+}
+
+.carousel{
+    padding: 0;
+}
+
+.w-100{
+    height: 600px;
 }
