agregamos SEO y gif animado en contacto

--- a/css/compilado.css
+++ b/css/compilado.css
@@ -15,6 +15,15 @@ h1 {
 .navbar-toggler {
   background-color: white; }
 
+.gify {
+  position: fixed;
+  width: 20vw;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
 /* ****HEADER**** */
 .header {
   display: grid;
@@ -170,7 +179,8 @@ img.header__logo {
 .footer {
   margin-top: 3REM;
   background-color: #6a888c;
-  display: flex; }
+  display: flex;
+  position: relative; }
 
 .footer__nav {
   padding: 0.4rem;
