--- a/sass/parciales/_reset.scss
+++ b/sass/parciales/_reset.scss
@@ -16,3 +16,13 @@ h1{
 .navbar-toggler {
     background-color: rgb(255, 255, 255);
 }
+
+.gify{
+    position: fixed;
+    width: 20vw;
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
+    padding-left: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
