--- a/sass/parciales/_hero.scss
+++ b/sass/parciales/_hero.scss
@@ -11,7 +11,7 @@
     &__h1{
         font-size: 3rem;
         text-align: center;
-        color: #05c9e7;
+        color: $h1_color;
         margin-top: 1.5rem;
     }
     &__button{
