--- a/sass/parciales/_vars.scss
+++ b/sass/parciales/_vars.scss
@@ -1,4 +1,9 @@
 $font: Verdana, Geneva, Tahoma, sans-serif;
-$content: 100vw, 2rem;
-$paleta: #00a6c0, #6a888c, #05c9e7, #5f7174;
+$h1_color: #05c9e7;
+$background:  #5f7174;
+$background_claro: #6a888c;
+$h2_color: #05c9e7;
+$caja: 3rem;
+$paleta_1: #05c9e7;
+
     
