--- a/sass/origen.scss
+++ b/sass/origen.scss
@@ -1,4 +1,5 @@
 @import "./parciales/reset";
+@import "./parciales/utilidades";
 @import "./parciales/vars";
 @import "./parciales/header";
 @import "./parciales/hero";
