--- a/sass/parciales/_medias-queris.scss
+++ b/sass/parciales/_medias-queris.scss
@@ -1,5 +1,4 @@
 /** @Medias **/
-
 @media screen and (min-width: 1024px){
     .footer{
         line-height: 3rem;
@@ -11,48 +10,39 @@
         flex-direction: column;
     }
 }
-
 @media screen and (max-width: 768px ){
     .negocio__div{
         flex-direction: column;
     }
-
     .footer {
         flex-direction: column;
         line-height: 2.5rem;
     }
-
     .hero{
         height: 82vh;
         }
     img.header__logo {
             width: 50px;
-    }
-        
+    }   
     .ico__ham{
             width: 80%;
             height: 80%;
-    }
-        
+    }  
     .ico__borde{
             width: 50px;
             height: 50px;
     }
-
     .cartas__div{
         flex-direction: column;
     }
-
-    .team__video{
+    .team__div__video{
         width: 100vw;
         position: relative;
     }
-
     .w-100{
         height: 500px;
     }
 }
-
 @media screen and (max-width: 425px){
     .negocio__div{
         flex-direction: column;
@@ -61,30 +51,25 @@
         flex-direction: column;
         line-height: 2.5rem;
     }
-
     .hero{
         height: 76vh;
         }
     img.header__logo {
             width: 50px;
-    }
-        
+    }   
     .ico__ham{
             width: 80%;
             height: 80%;
-    }
-        
+    }  
     .ico__borde{
             width: 50px;
             height: 50px;
     }
-
-    .team__video{
+    .team__div__video{
         width: 100vw;
         position: relative;
     }
-    
-    .mascotasinf__div{
+    .mascotainf__div{
         flex-direction: column;
     }
     .w-100{
