--- a/sass/parciales/_proyecto.scss
+++ b/sass/parciales/_proyecto.scss
@@ -1,38 +1,34 @@
 /******** proyecto *******/
-.mascotasinf{
-    &__h1{
-        font-size: 3rem;
-        text-align: center;
-        color: #05c9e7;
-        top: 1rem;
-        margin-top: 2.3rem;
-        margin-bottom: 2.3rem;
-    }
-    &__div{
-        display: flex;
-        margin: 1rem;
-        padding: 1rem;
-        align-items: center;    
-    }
-
-}
-.mascotainf__p{
+.proyect__h1{
+    font-size: 3rem;
     text-align: center;
+    color: #05c9e7;
+    top: 1rem;
+    margin-top: 2.3rem;
+    margin-bottom: 2.3rem;
 }
-.mascotainf__img{
-    width: 5rem;
-    height: 5rem;
-}
-
-.mascotainf__h2{
-    margin: 1rem;
-    color: #00a6c0;  
-}
-
 .carousel{
     padding: 0;
 }
 
 .w-100{
     height: 600px;
+}
+.mascotainf__div{
+        display: flex;
+        margin: 1rem;
+        padding: 1rem;
+        align-items: center;    
+        &__p{
+            text-align: center;
+        }
+        &__img{
+            width: 5rem;
+            height: 5rem;
+        }
+        
+        &__h2{
+            margin: 1rem;
+            color: #00a6c0;  
+        }
 }
