--- a/sass/parciales/_proyecto.scss
+++ b/sass/parciales/_proyecto.scss
@@ -6,11 +6,12 @@
     top: 1rem;
     margin-top: 2.3rem;
     margin-bottom: 2.3rem;
+    text-shadow: 0rem 0.2rem 0.3rem #000000;
+    font-weight: bolder;
 }
 .carousel{
     padding: 0;
 }
-
 .w-100{
     height: 600px;
 }
