--- a/sass/parciales/_medias-queris.scss
+++ b/sass/parciales/_medias-queris.scss
@@ -72,6 +72,9 @@
     .mascotainf__div{
         flex-direction: column;
     }
+    .mascotainf__div__img{
+        width: 100%;
+    }
     .w-100{
         height: 300px;
     }
