--- a/sass/parciales/_proyecto.scss
+++ b/sass/parciales/_proyecto.scss
@@ -13,7 +13,8 @@
     padding: 0;
 }
 .w-100{
-    height: 600px;
+    height: 500px;
+    object-fit: fill;
 }
 .mascotainf__div{
         display: flex;
@@ -22,10 +23,13 @@
         align-items: center;    
         &__p{
             text-align: center;
+            padding: 2rem;
+            margin-bottom: 0;
         }
         &__img{
-            width: 5rem;
-            height: 5rem;
+            width: 35%;
+            height: auto;
+            flex: 100%;
         }
         
         &__h2{
